--- a/Index.html
+++ b/Index.html
@@ -1,14 +1,25 @@
+ <!--Nome original "Dice Roll Simulator"
+https://www.youtube.com/@CodeWithSahand -->
+
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="Index.html">
-    <title>Teste de conexão </title>
+    <title>Dominó </title>
+    <link rel="stylesheet" href="/CSS/styyle.css">
 </head>
+<script src="/JS/index.js"></script>
 <body>
-    <h1>Teste de Conexão</h1>
-    <p>Este arquivo é um teste de conexão da pastal local com a pasta remota no Github.</p>
+    <h1>Jogo de Domino</h1>
+    <div class="dice" id="dice">&#9860;</div>
+    <button id="roll-button">Sortear</button>
+    <ul id="roll-history">
+        <li>Roll 1: <span>&#9856;</span></li>
+        <li>Roll 2: <span>&#9857;</span></li>
+     </ul>
+
+    
     
 </body>
 </html>
