--- a/Index.html
+++ b/Index.html
@@ -8,15 +8,16 @@ https://www.youtube.com/@CodeWithSahand -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dominó </title>
     <link rel="stylesheet" href="/CSS/styyle.css">
+    <script src="/JS/index.js"></script>
 </head>
-<script src="/JS/index.js"></script>
+
 <body>
     <h1>Jogo de Domino</h1>
     <div class="dice" id="dice">&#9860;</div>
     <button id="roll-button">Sortear</button>
     <ul id="roll-history">
-        <li>Roll 1: <span>&#9856;</span></li>
-        <li>Roll 2: <span>&#9857;</span></li>
+       <!-- <li>Roll 1: <span>&#9856;</span></li>
+        <li>Roll 2: <span>&#9857;</span></li>-->
      </ul>
 
     
